@@ -12,6 +12,7 @@ Version 1.0.2 to be released
 - Bug: Fixed an issue in CUrlManager::createUrl when GET parameters contain arrays (Qiang)
 - New #88: Added public properties to CActiveRecord::safeAttributes() (Qiang)
 - New #92: Empty error messages in models are handled better when being displayed (Qiang)
+- New #93: Changed CLinkPager and CListPager so that the messages are internationalized (Qiang)
 - New #95: Added an option to CHtml::activeCheckBox() to define default value if unchecked (Qiang)
 - New: Added CActiveRecord::getRelated() (Qiang)
 - New: Added 'return' option to HTML options in CHtml (Qiang)
